# gateway-service

./: .gitignore  .run-tests-ignore.sh.swp  Dockerfile  Jenkinsfile  Makefile  Procfile  README.md  comparison_226_dev.txt  comparison_master_dev.txt  database.db  dependencies.json  mypy.ini  pyinstaller-readme.md  pyproject.toml  requirements-openmotics-py3.txt  requirements-py3.txt  requirements.txt  setup.cfg  shell.nix
docker/: Dockerfile  build.sh  install_docker.sh  supervisord.conf
docker/pyinstaller/: Makefile
docker/runner/: .gitignore  README.md  container.sh
docker/test/: Dockerfile
docs/: api-postman-collection.json
example/: master_fixture.json  openmotics.conf
gw-service/: ES-package-build.sh  Makefile  create-package.sh  openmotics_service.spec
gw-service/package/: clean.sh
hooks/: hook-peewee_migrate.py
src/: alembic.ini  constants.py  core_updater.py  enums.py  ioc.py  led_service.py  logs.py  master_tool.py  models.py  modules_bootloader.py  openmotics_cli.py  openmotics_init.py  openmotics_service.py  openmotics_update.py  platform_utils.py  post-update.sh  power_bootloader.py  rs485_updater.py  self_test.py  serial_utils.py  setup.cfg  toolbox.py  update.py  vpn_service.py  watchdog.py
src/alembic/: env.py
stubs/: msgpack.pyi  serial.pyi
tools/: add_serial_number.py  api-tester.py  api_docs.py  create_wheels.sh  hex_diff.py  hex_editor.py  rs485_pingpong.py  rs485_watcher.py  validate_cli_serial.py  validate_p1.py
vpn-service/: .gitignore  ES-package-build.sh  Makefile  create-package.sh  vpn_service.spec
(+603 files in other folders)
