[tool.poetry]
name = "gateway"
version = "2.14.1"
description = "OpenMotics Gateway"
authors = []

[tool.poetry.dependencies]
python = "^2.7 || >=3.7"

apscheduler = "^3.6"
cherrypy = "^17.4"
croniter = "^0.3"
decorator = "^4.4"
intelhex = "^2.2"
msgpack = "^0.6"
peewee = "^3.13"
peewee-migrate = "^1.1"
psutil = "^5.7"
pyserial = "^3.4"
requests = "^2.24"
simple-pid = "^0.2"
six = "^1.15"
sqlalchemy = "^1.3"
typing = "^3.7"
ujson = "^2.0"
ws4py = "^0.5"

[tool.poetry.dev-dependencies]
hypothesis = "^4.57"
ipython = "^5.10"
isort = "^4.3"
mock = "^3.0"
pytest = "^4.6"
xmlrunner = "^1.7"
pytest-cov = "^2.10"

[tool.isort]
multi_line_output = 2

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]
